--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,5 +1,5 @@
 body {
-    padding-left: 0;
+    padding: 0px 0px 0px 0px;
 }
 
 main {
@@ -10,6 +10,7 @@ main {
         "aside"
         "article"
         "sectionBot";
+    padding-top: 31px;
 }
 
 /*  ---------------------------------   HEADER   ---------------------------------  */
@@ -26,6 +27,7 @@ nav {
 
 nav>ul>li {
     width: 100%;
+    padding: 48px 0px 23px 0px;
     border-top: none;
     border-bottom: solid 2px transparent;
 }
@@ -87,14 +89,20 @@ h2 {
 }
 
 .filters_container>ul {
-    justify-content: center;
+    /* avant */
+    /* justify-content: center;*/
     gap: 17px 5%;
+    /* apres */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    /* gap: 0; */
 }
 
 /*  ------------   SECTION TOP > FILTRES > Boutons  ------------  */
 
 .btn_filter {
-    width: 160px;
+    width: 100%;
     height: 50px;
     align-items: center
 }
@@ -110,7 +118,7 @@ h2 {
 
 /*  ------------------------   SECTION TOP > INFO   ------------------------  */
 .info_container {
-    padding: 40px 0px 17px 0;
+    padding: 40px 22px 17px 0;
     align-items: flex-start;
 }
 
@@ -154,6 +162,10 @@ h2 {
 
 .section_activites {
     padding: 105px 22px 0px 19px;
+}
+
+.section_activites h2 {
+    padding-top: 0px;
 }
 
 .section_cards_wrapper {
